# routes.js
@@ -7,6 +7,7 @@ module.exports = function(app) {
 
 	app.get("/api/apps", app.controllers.api.application.get);
 	app.post("/api/apps", app.controllers.api.application.post);
+	app.put("/api/apps/:app_name/issues", app.controllers.api.application.issues.put);
 	app.post("/api/apps/:app_name/releases", app.controllers.api.release.post);
 	app.get("/api/apps/:app_name/releases", app.controllers.api.release.get);
 	app.delete("/api/apps/:app_name/releases/:name", app.controllers.api.release.delete);
